# USBtinyISPGUI

./: CMakeLists.txt  README.md  README.txt  USBtinyISPGUI.cpp  USBtinyISPGUI.h  USBtinyISPGUI.pro  USBtinyISPGUI.ui  configureDialog.ui  configuredialog.cpp  configuredialog.h  deviceinfodialog.cpp  deviceinfodialog.h  deviceinfodialog.ui  main.cpp  qrc_resource.cpp  resource.qrc  ui_USBtinyISPGUI.h  ui_configureDialog.h  ui_deviceInfo.h  ui_deviceinfodialog.h  ui_dialog.h
config/: USBtinyISPGUIConfigFile.xml
src/: USBtinyISPGUI.cpp  USBtinyISPGUI.h  USBtinyISPGUI.ui  bitswidget.cpp  bitswidget.h  confighandler.cpp  confighandler.h  configureDialog.ui  configuredialog.cpp  configuredialog.h  deviceinfodialog.cpp  deviceinfodialog.h  deviceinfodialog.ui  main.cpp  qrc_resource.cpp  shellcmdexecutor.cpp  shellcmdexecutor.h
translations/: README_mk.md
